--- a/src/theme/mobile.scss
+++ b/src/theme/mobile.scss
@@ -244,6 +244,10 @@ $tablet-width: 767px;
     }
   }
 
+  .floating-ribbons > div {
+    right: calc(23px - 100%);
+  }
+
   ngx-monaco-editor {
     width: 100vw !important;
     max-height: 50vh;
